--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   http: ^0.13.4
   sqflite: ^2.0.2+1
   path_provider: ^2.0.10
-
+  video_player: ^2.4.2
+  chewie: ^1.3.3
+  permission_handler: ^9.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
